FEAR.Lang/Lang/CFEARParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/Source/Repos/Research/FEAR/FEAR.Core/CFEARParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FEAR {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class CFEARParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Break=1, Else=2, Var=3, Return=4, Void=5, Continue=6, For=7, Foreach=8, 
		While=9, With=10, Create=11, Function_=12, If=13, In=14, As=15, New=16, 
		EndL=17, EndB=18, Define=19, Internal=20, Interpreter_=21, Collector=22, 
		Codifier=23, Module=24, Codify=25, Ontology=26, Entity=27, Property=28, 
		Include=29, Identified=30, By=31, Prefix_=32, Accepts=33, Search=34, Result=35, 
		Required=36, Optional=37, InterpreterSkip=38, Enum=39, List=40, Boolean=41, 
		Object=42, Byte=43, Char=44, String=45, Int=46, Long=47, Float=48, Double=49, 
		Short=50, OpenBracket=51, CloseBracket=52, OpenParen=53, CloseParen=54, 
		OpenBrace=55, CloseBrace=56, SemiColon=57, Comma=58, Assign=59, QuestionMark=60, 
		Colon=61, Dot=62, PlusPlus=63, MinusMinus=64, Plus=65, Minus=66, BitNot=67, 
		Not=68, Multiply=69, Divide=70, Modulus=71, LessThan=72, MoreThan=73, 
		LessThanEquals=74, GreaterThanEquals=75, Equals_=76, NotEquals=77, RightShiftArithmetic=78, 
		LeftShiftArithmetic=79, BitAnd=80, BitXOr=81, BitOr=82, And=83, Or=84, 
		Arrow=85, ColonColon=86, Disk=87, Memory=88, Network=89, TypeConversion=90, 
		NULL_LITERAL=91, DECIMAL_LITERAL=92, HEX_LITERAL=93, OCT_LITERAL=94, BINARY_LITERAL=95, 
		FLOAT_LITERAL=96, HEX_FLOAT_LITERAL=97, BOOL_LITERAL=98, CHAR_LITERAL=99, 
		STRING_LITERAL=100, Whitespace=101, MultiLineComment=102, SingleLineComment=103, 
		Newline=104, UnexpectedCharacter=105, IDENTIFIER=106;
	public const int
		RULE_program = 0, RULE_enumDeclaration = 1, RULE_enumConstants = 2, RULE_enumConstant = 3, 
		RULE_fieldDeclaration = 4, RULE_variableDeclarators = 5, RULE_variableDeclarator = 6, 
		RULE_variableDeclaratorId = 7, RULE_variableInitializer = 8, RULE_arrayInitializer = 9, 
		RULE_literal = 10, RULE_integerLiteral = 11, RULE_floatLiteral = 12, RULE_block = 13, 
		RULE_blockStatement = 14, RULE_localVariableDeclaration = 15, RULE_identifier = 16, 
		RULE_diskSearchStatement = 17, RULE_networkSearchStatement = 18, RULE_acceptsStatement = 19, 
		RULE_collectorStatement = 20, RULE_collectorDefinition = 21, RULE_collectorUse = 22, 
		RULE_interpreterStatement = 23, RULE_moduleStatement = 24, RULE_statement = 25, 
		RULE_forControl = 26, RULE_forInit = 27, RULE_foreachControl = 28, RULE_parExpression = 29, 
		RULE_expressionList = 30, RULE_methodCall = 31, RULE_expression = 32, 
		RULE_primary = 33, RULE_typeType = 34, RULE_primitiveType = 35, RULE_primitiveTypeIdentifiers = 36, 
		RULE_arguments = 37;
	public static readonly string[] ruleNames = {
		"program", "enumDeclaration", "enumConstants", "enumConstant", "fieldDeclaration", 
		"variableDeclarators", "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
		"arrayInitializer", "literal", "integerLiteral", "floatLiteral", "block", 
		"blockStatement", "localVariableDeclaration", "identifier", "diskSearchStatement", 
		"networkSearchStatement", "acceptsStatement", "collectorStatement", "collectorDefinition", 
		"collectorUse", "interpreterStatement", "moduleStatement", "statement", 
		"forControl", "forInit", "foreachControl", "parExpression", "expressionList", 
		"methodCall", "expression", "primary", "typeType", "primitiveType", "primitiveTypeIdentifiers", 
		"arguments"
	};

	private static readonly string[] _LiteralNames = {
		null, "'break'", "'else'", "'var'", "'return'", "'void'", "'continue'", 
		"'for'", "'foreach'", "'while'", "'with'", "'create'", "'function'", "'if'", 
		"'in'", "'as'", "'new'", "'L'", "'B'", "'define'", "'internal'", "'interpreter'", 
		"'collector'", "'codifier'", "'module'", "'codify'", "'ontology'", "'entity'", 
		"'property'", "'include'", "'identified'", "'by'", "'prefix'", "'accepts'", 
		"'search'", "'result'", "'required'", "'optional'", "'S'", "'enum'", "'list'", 
		"'boolean'", "'object'", "'byte'", "'char'", "'string'", "'int'", "'long'", 
		"'float'", "'double'", "'short'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
		"';'", "','", "'='", "'?'", "':'", "'.'", "'++'", "'--'", "'+'", "'-'", 
		"'~'", "'!'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", 
		"'!='", "'>>'", "'<<'", "'&'", "'^'", "'|'", "'&&'", "'||'", "'=>'", "'::'", 
		"'disk'", "'memroy'", "'network'", "'->'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Break", "Else", "Var", "Return", "Void", "Continue", "For", "Foreach", 
		"While", "With", "Create", "Function_", "If", "In", "As", "New", "EndL", 
		"EndB", "Define", "Internal", "Interpreter_", "Collector", "Codifier", 
		"Module", "Codify", "Ontology", "Entity", "Property", "Include", "Identified", 
		"By", "Prefix_", "Accepts", "Search", "Result", "Required", "Optional", 
		"InterpreterSkip", "Enum", "List", "Boolean", "Object", "Byte", "Char", 
		"String", "Int", "Long", "Float", "Double", "Short", "OpenBracket", "CloseBracket", 
		"OpenParen", "CloseParen", "OpenBrace", "CloseBrace", "SemiColon", "Comma", 
		"Assign", "QuestionMark", "Colon", "Dot", "PlusPlus", "MinusMinus", "Plus", 
		"Minus", "BitNot", "Not", "Multiply", "Divide", "Modulus", "LessThan", 
		"MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals_", "NotEquals", 
		"RightShiftArithmetic", "LeftShiftArithmetic", "BitAnd", "BitXOr", "BitOr", 
		"And", "Or", "Arrow", "ColonColon", "Disk", "Memory", "Network", "TypeConversion", 
		"NULL_LITERAL", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", 
		"FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
		"STRING_LITERAL", "Whitespace", "MultiLineComment", "SingleLineComment", 
		"Newline", "UnexpectedCharacter", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CFEARParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CFEARParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CFEARParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CFEARParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CollectorStatementContext collectorStatement() {
			return GetRuleContext<CollectorStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CFEARParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CollectorUseContext[] collectorUse() {
			return GetRuleContexts<CollectorUseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CollectorUseContext collectorUse(int i) {
			return GetRuleContext<CollectorUseContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockStatementContext[] blockStatement() {
			return GetRuleContexts<BlockStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockStatementContext blockStatement(int i) {
			return GetRuleContext<BlockStatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			collectorStatement();
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Collector) {
				{
				{
				State = 77;
				collectorUse();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 83;
				blockStatement();
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -9031970117824470062L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 4535351246879L) != 0) );
			State = 88;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Enum() { return GetToken(CFEARParser.Enum, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenBrace() { return GetToken(CFEARParser.OpenBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(CFEARParser.SemiColon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseBrace() { return GetToken(CFEARParser.CloseBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EnumConstantsContext enumConstants() {
			return GetRuleContext<EnumConstantsContext>(0);
		}
		public EnumDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumDeclarationContext enumDeclaration() {
		EnumDeclarationContext _localctx = new EnumDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_enumDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(Enum);
			State = 91;
			identifier();
			State = 92;
			Match(OpenBrace);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Result || _la==List || _la==IDENTIFIER) {
				{
				State = 93;
				enumConstants();
				}
			}

			State = 96;
			Match(SemiColon);
			State = 97;
			Match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumConstantsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EnumConstantContext[] enumConstant() {
			return GetRuleContexts<EnumConstantContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumConstantContext enumConstant(int i) {
			return GetRuleContext<EnumConstantContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(CFEARParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(CFEARParser.Comma, i);
		}
		public EnumConstantsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumConstants; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumConstants(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumConstantsContext enumConstants() {
		EnumConstantsContext _localctx = new EnumConstantsContext(Context, State);
		EnterRule(_localctx, 4, RULE_enumConstants);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			enumConstant();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 100;
				Match(Comma);
				State = 101;
				enumConstant();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumConstantContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public EnumConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumConstant; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumConstantContext enumConstant() {
		EnumConstantContext _localctx = new EnumConstantContext(Context, State);
		EnterRule(_localctx, 6, RULE_enumConstant);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			identifier();
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==OpenParen) {
				{
				State = 108;
				arguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeTypeContext typeType() {
			return GetRuleContext<TypeTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorsContext variableDeclarators() {
			return GetRuleContext<VariableDeclaratorsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(CFEARParser.SemiColon, 0); }
		public FieldDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFieldDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldDeclarationContext fieldDeclaration() {
		FieldDeclarationContext _localctx = new FieldDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_fieldDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			typeType();
			State = 112;
			variableDeclarators();
			State = 113;
			Match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorContext[] variableDeclarator() {
			return GetRuleContexts<VariableDeclaratorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorContext variableDeclarator(int i) {
			return GetRuleContext<VariableDeclaratorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(CFEARParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(CFEARParser.Comma, i);
		}
		public VariableDeclaratorsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclarators; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclarators(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorsContext variableDeclarators() {
		VariableDeclaratorsContext _localctx = new VariableDeclaratorsContext(Context, State);
		EnterRule(_localctx, 10, RULE_variableDeclarators);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			variableDeclarator();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 116;
				Match(Comma);
				State = 117;
				variableDeclarator();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclaratorIdContext variableDeclaratorId() {
			return GetRuleContext<VariableDeclaratorIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(CFEARParser.Assign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableInitializerContext variableInitializer() {
			return GetRuleContext<VariableInitializerContext>(0);
		}
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclarator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclarator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorContext variableDeclarator() {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(Context, State);
		EnterRule(_localctx, 12, RULE_variableDeclarator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			variableDeclaratorId();
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Assign) {
				{
				State = 124;
				Match(Assign);
				State = 125;
				variableInitializer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] OpenBracket() { return GetTokens(CFEARParser.OpenBracket); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenBracket(int i) {
			return GetToken(CFEARParser.OpenBracket, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] CloseBracket() { return GetTokens(CFEARParser.CloseBracket); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseBracket(int i) {
			return GetToken(CFEARParser.CloseBracket, i);
		}
		public VariableDeclaratorIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclaratorId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclaratorId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorIdContext variableDeclaratorId() {
		VariableDeclaratorIdContext _localctx = new VariableDeclaratorIdContext(Context, State);
		EnterRule(_localctx, 14, RULE_variableDeclaratorId);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			identifier();
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OpenBracket) {
				{
				{
				State = 129;
				Match(OpenBracket);
				State = 130;
				Match(CloseBracket);
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableInitializerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArrayInitializerContext arrayInitializer() {
			return GetRuleContext<ArrayInitializerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public VariableInitializerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableInitializer; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICFEARParserVisitor<TResult> typedVisitor = visitor as ICFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableInitializer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableInitializerContext variableInitializer() {
		VariableInitializerContext _localctx = new VariableInitializerContext(Context, State);
		EnterRule(_localctx, 16, RULE_variableInitializer);
		try {
			State = 138;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case OpenBrace:
				EnterOuterAlt(_localctx, 1);
				{
				State = 136;
				arrayInitializer();
				}
				break;
			case New:
			case Result:
			case List:
			case OpenParen:
			case PlusPlus:
			case MinusMinus:
			case Plus:
			case Minus:
			case BitNot:
			case Not:
			case NULL_LITERAL:
			case DECIMAL_LITERAL:
			case HEX_LITERAL:
			case OCT_LITERAL:
			case BINARY_LITERAL:
			case FLOAT_LITERAL:
			case HEX_FLOAT_LITERAL:
			case BOOL_LITERAL:
			case CHAR_LITERAL:
			case STRING_LITERAL:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 137;
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
